--- a/our-story.html
+++ b/our-story.html
@@ -396,7 +396,7 @@
                 <h1>Our Golf Journey, Bryce Friends Forever - BFF</h1>
             </div>
             <div class="nav-buttons">
-                <a href="index.html" class="btn btn-primary">
+                <a href="." class="btn btn-primary">
                     🏠 Dashboard
                 </a>
                 <a href="analytics.html" class="btn btn-secondary">
