--- a/our-story.html
+++ b/our-story.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Story - Golf Journey, Bryce Friends Forever - BFF</title>
     <link rel="icon" href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;⛳&lt;/text&gt;&lt;/svg&gt;">
-    <link rel="stylesheet" href="enhanced-styles.css">
+    <link rel="stylesheet" href="./enhanced-styles.css">
     <style>
         * {
             margin: 0;
