--- a/index.html
+++ b/index.html
@@ -741,6 +741,8 @@
                         <option value="Paultz">Paultz</option>
                         <option value="COW">COW</option>
                         <option value="UCOW">UCOW</option>
+                        <option value="Moose">Moose</option>
+                        <option value="Spring Classic">Spring Classic</option> <!-- NEW TROPHY -->
                     </select>
                 </div>
                 <div class="form-group">
