--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                         <option value="COW">COW</option>
                         <option value="UCOW">UCOW</option>
                         <option value="Moose">Moose</option>
-                        <option value="Spring Classic">Spring Classic</option> <!-- NEW TROPHY -->
+                        </option> <!-- NEW TROPHY -->
                     </select>
                 </div>
                 <div class="form-group">
